# structs_l1

./: .astylerc  1.txt  2.txt  CMakeLists.txt  README.md  fmt.sh  out.txt  release.sh  task3  temp.txt
laba3/: DoubleList.hpp  OneList.hpp  main_double.cpp  main_one.cpp  task.hpp
laba4/: main.cpp
laba5/: main.cpp  test_double.cpp  test_one.cpp
src/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  process_str.cpp
